unpackaged/main/default/objects/Jeaning__c/Jeaning__c.object-meta.xml
<CustomObject>
    <label>Jeaning</label>
    <nameField>
        <label>Jeaning  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jeaning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>