unpackaged/main/default/objects/Jeaning__c/fields/Amount_of_seller_product__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_seller_product__c</fullName>
    <label>Amount of product which is sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>