unpackaged/main/default/objects/Jeaning__c/fields/Product_detail__c.field-meta.xml
<CustomField>
    <fullName>Product_detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product detail</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Jeaning</relationshipLabel>
    <relationshipName>Jeaning</relationshipName>
    <type>Lookup</type>
</CustomField>