unpackaged/main/default/objects/Jeaning__c/fields/Rate_of_Selling_Per_kg__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Selling_Per_kg__c</fullName>
    <label>Rate of Selling Per kg</label>
    <length>20</length>
    <type>Text</type>
</CustomField>