unpackaged/main/default/objects/Jeaning__c/fields/status_of_rent_paid_or_not__c.field-meta.xml
<CustomField>
    <fullName>status_of_rent_paid_or_not__c</fullName>
    <label>status of rent paid or not</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>Not paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>